More compact `ByIdTest`